CS152/project-03---code-generation/y.output
Terminals unused in grammar

   BREAK


Grammar

    0 $accept: prog_start $end

    1 prog_start: program

    2 program: function
    3        | program function

    4 function: functions SEMICOLON begin_params declarations end_params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY Statements END_BODY

    5 functions: FUNCTION IDENT

    6 Ident: IDENT
    7      | IDENT COMMA Ident

    8 begin_params: BEGIN_PARAMS

    9 end_params: END_PARAMS

   10 declarations: %empty
   11             | declaration SEMICOLON declarations

   12 declaration: Ident COLON declarationInt

   13 declarationInt: INTEGER
   14               | ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

   15 IFfunction: IF BoolExp THEN

   16 IFELSEFunc: IFfunction Statements ELSE

   17 WHILEFunc: WHILE

   18 WHILEStatement: WHILEFunc BoolExp BEGINLOOP

   19 DOWHILEfunc: DO BEGINLOOP

   20 DOWHILEStatemnt: DOWHILEfunc Statements ENDLOOP

   21 statement: IDENT ASSIGN Expression
   22          | IDENT L_SQUARE_BRACKET Expression R_SQUARE_BRACKET ASSIGN Expression
   23          | IFfunction Statements ENDIF
   24          | IFELSEFunc Statements ENDIF
   25          | WHILEStatement Statements ENDLOOP
   26          | DOWHILEStatemnt WHILE BoolExp
   27          | READ varss
   28          | WRITE varss
   29          | CONTINUE
   30          | RETURN Expression

   31 varss: var
   32      | varss COMMA var

   33 Statements: %empty
   34           | statement SEMICOLON Statements

   35 var: IDENT
   36    | IDENT L_SQUARE_BRACKET Expression R_SQUARE_BRACKET

   37 BoolExp: Relation_and_Exp
   38        | BoolExp OR Relation_and_Exp

   39 Relation_and_Exp: RelationExp
   40                 | Relation_and_Exp AND RelationExp

   41 RelationExp: NOT RelationExp
   42            | Expression EQ Expression
   43            | Expression NEQ Expression
   44            | Expression LT Expression
   45            | Expression GT Expression
   46            | Expression LTE Expression
   47            | Expression GTE Expression
   48            | TRUE
   49            | FALSE
   50            | L_PAREN BoolExp R_PAREN

   51 Expression: MultExp
   52           | Expression ADD MultExp
   53           | Expression SUB MultExp

   54 MultExp: term
   55        | MultExp MULT term
   56        | MultExp DIV term
   57        | MultExp MOD term

   58 termParen: L_PAREN TermExp R_PAREN
   59          | L_PAREN R_PAREN

   60 TermExp: Expression
   61        | Expression COMMA TermExp

   62 term: SUB term
   63     | var
   64     | NUMBER
   65     | L_PAREN Expression R_PAREN
   66     | IDENT termParen


Terminals, with rules where they appear

$end (0) 0
error (256)
NUMBER (258) 14 64
IDENT (259) 5 6 7 21 22 35 36 66
FUNCTION (260) 5
BEGIN_PARAMS (261) 8
END_PARAMS (262) 9
BEGIN_LOCALS (263) 4
END_LOCALS (264) 4
BEGIN_BODY (265) 4
END_BODY (266) 4
INTEGER (267) 13 14
ARRAY (268) 14
OF (269) 14
IF (270) 15
THEN (271) 15
ENDIF (272) 23 24
ELSE (273) 16
WHILE (274) 17 26
DO (275) 19
BEGINLOOP (276) 18 19
ENDLOOP (277) 20 25
BREAK (278)
CONTINUE (279) 29
READ (280) 27
WRITE (281) 28
TRUE (282) 48
FALSE (283) 49
RETURN (284) 30
AND (285) 40
OR (286) 38
NOT (287) 41
ASSIGN (288) 21 22
SUB (289) 53 62
ADD (290) 52
MULT (291) 55
DIV (292) 56
MOD (293) 57
EQ (294) 42
NEQ (295) 43
LT (296) 44
GT (297) 45
LTE (298) 46
GTE (299) 47
L_PAREN (300) 50 58 59 65
R_PAREN (301) 50 58 59 65
L_SQUARE_BRACKET (302) 14 22 36
R_SQUARE_BRACKET (303) 14 22 36
SEMICOLON (304) 4 11 34
COLON (305) 12
COMMA (306) 7 32 61


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
prog_start (53)
    on left: 1, on right: 0
program (54)
    on left: 2 3, on right: 1 3
function (55)
    on left: 4, on right: 2 3
functions (56)
    on left: 5, on right: 4
Ident (57)
    on left: 6 7, on right: 7 12
begin_params (58)
    on left: 8, on right: 4
end_params (59)
    on left: 9, on right: 4
declarations (60)
    on left: 10 11, on right: 4 11
declaration (61)
    on left: 12, on right: 11
declarationInt (62)
    on left: 13 14, on right: 12
IFfunction (63)
    on left: 15, on right: 16 23
IFELSEFunc (64)
    on left: 16, on right: 24
WHILEFunc (65)
    on left: 17, on right: 18
WHILEStatement (66)
    on left: 18, on right: 25
DOWHILEfunc (67)
    on left: 19, on right: 20
DOWHILEStatemnt (68)
    on left: 20, on right: 26
statement (69)
    on left: 21 22 23 24 25 26 27 28 29 30, on right: 34
varss (70)
    on left: 31 32, on right: 27 28 32
Statements (71)
    on left: 33 34, on right: 4 16 20 23 24 25 34
var (72)
    on left: 35 36, on right: 31 32 63
BoolExp (73)
    on left: 37 38, on right: 15 18 26 38 50
Relation_and_Exp (74)
    on left: 39 40, on right: 37 38 40
RelationExp (75)
    on left: 41 42 43 44 45 46 47 48 49 50, on right: 39 40 41
Expression (76)
    on left: 51 52 53, on right: 21 22 30 36 42 43 44 45 46 47 52 53
    60 61 65
MultExp (77)
    on left: 54 55 56 57, on right: 51 52 53 55 56 57
termParen (78)
    on left: 58 59, on right: 66
TermExp (79)
    on left: 60 61, on right: 58 61
term (80)
    on left: 62 63 64 65 66, on right: 54 55 56 57 62


State 0

    0 $accept: . prog_start $end

    FUNCTION  shift, and go to state 1

    prog_start  go to state 2
    program     go to state 3
    function    go to state 4
    functions   go to state 5


State 1

    5 functions: FUNCTION . IDENT

    IDENT  shift, and go to state 6


State 2

    0 $accept: prog_start . $end

    $end  shift, and go to state 7


State 3

    1 prog_start: program .
    3 program: program . function

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (prog_start)

    function   go to state 8
    functions  go to state 5


State 4

    2 program: function .

    $default  reduce using rule 2 (program)


State 5

    4 function: functions . SEMICOLON begin_params declarations end_params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY Statements END_BODY

    SEMICOLON  shift, and go to state 9


State 6

    5 functions: FUNCTION IDENT .

    $default  reduce using rule 5 (functions)


State 7

    0 $accept: prog_start $end .

    $default  accept


State 8

    3 program: program function .

    $default  reduce using rule 3 (program)


State 9

    4 function: functions SEMICOLON . begin_params declarations end_params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_PARAMS  shift, and go to state 10

    begin_params  go to state 11


State 10

    8 begin_params: BEGIN_PARAMS .

    $default  reduce using rule 8 (begin_params)


State 11

    4 function: functions SEMICOLON begin_params . declarations end_params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENT  shift, and go to state 12

    $default  reduce using rule 10 (declarations)

    Ident         go to state 13
    declarations  go to state 14
    declaration   go to state 15


State 12

    6 Ident: IDENT .
    7      | IDENT . COMMA Ident

    COMMA  shift, and go to state 16

    $default  reduce using rule 6 (Ident)


State 13

   12 declaration: Ident . COLON declarationInt

    COLON  shift, and go to state 17


State 14

    4 function: functions SEMICOLON begin_params declarations . end_params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY Statements END_BODY

    END_PARAMS  shift, and go to state 18

    end_params  go to state 19


State 15

   11 declarations: declaration . SEMICOLON declarations

    SEMICOLON  shift, and go to state 20


State 16

    7 Ident: IDENT COMMA . Ident

    IDENT  shift, and go to state 12

    Ident  go to state 21


State 17

   12 declaration: Ident COLON . declarationInt

    INTEGER  shift, and go to state 22
    ARRAY    shift, and go to state 23

    declarationInt  go to state 24


State 18

    9 end_params: END_PARAMS .

    $default  reduce using rule 9 (end_params)


State 19

    4 function: functions SEMICOLON begin_params declarations end_params . BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY Statements END_BODY

    BEGIN_LOCALS  shift, and go to state 25


State 20

   11 declarations: declaration SEMICOLON . declarations

    IDENT  shift, and go to state 12

    $default  reduce using rule 10 (declarations)

    Ident         go to state 13
    declarations  go to state 26
    declaration   go to state 15


State 21

    7 Ident: IDENT COMMA Ident .

    $default  reduce using rule 7 (Ident)


State 22

   13 declarationInt: INTEGER .

    $default  reduce using rule 13 (declarationInt)


State 23

   14 declarationInt: ARRAY . L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF INTEGER

    L_SQUARE_BRACKET  shift, and go to state 27


State 24

   12 declaration: Ident COLON declarationInt .

    $default  reduce using rule 12 (declaration)


State 25

    4 function: functions SEMICOLON begin_params declarations end_params BEGIN_LOCALS . declarations END_LOCALS BEGIN_BODY Statements END_BODY

    IDENT  shift, and go to state 12

    $default  reduce using rule 10 (declarations)

    Ident         go to state 13
    declarations  go to state 28
    declaration   go to state 15


State 26

   11 declarations: declaration SEMICOLON declarations .

    $default  reduce using rule 11 (declarations)


State 27

   14 declarationInt: ARRAY L_SQUARE_BRACKET . NUMBER R_SQUARE_BRACKET OF INTEGER

    NUMBER  shift, and go to state 29


State 28

    4 function: functions SEMICOLON begin_params declarations end_params BEGIN_LOCALS declarations . END_LOCALS BEGIN_BODY Statements END_BODY

    END_LOCALS  shift, and go to state 30


State 29

   14 declarationInt: ARRAY L_SQUARE_BRACKET NUMBER . R_SQUARE_BRACKET OF INTEGER

    R_SQUARE_BRACKET  shift, and go to state 31


State 30

    4 function: functions SEMICOLON begin_params declarations end_params BEGIN_LOCALS declarations END_LOCALS . BEGIN_BODY Statements END_BODY

    BEGIN_BODY  shift, and go to state 32


State 31

   14 declarationInt: ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET . OF INTEGER

    OF  shift, and go to state 33


State 32

    4 function: functions SEMICOLON begin_params declarations end_params BEGIN_LOCALS declarations END_LOCALS BEGIN_BODY . Statements END_BODY

    IDENT     shift, and go to state 34
    IF        shift, and go to state 35
    WHILE     shift, and go to state 36
    DO        shift, and go to state 37
    CONTINUE  shift, and go to state 38
    READ      shift, and go to state 39
    WRITE     shift, and go to state 40
    RETURN    shift, and go to state 41

    $default  reduce using rule 33 (Statements)

    IFfunction       go to state 42
    IFELSEFunc       go to state 43
    WHILEFunc        go to state 44
    WHILEStatement   go to state 45
    DOWHILEfunc      go to state 46
    DOWHILEStatemnt  go to state 47
    statement        go to state 48
    Statements       go to state 49


State 33

   14 declarationInt: ARRAY L_SQUARE_BRACKET NUMBER R_SQUARE_BRACKET OF . INTEGER

    INTEGER  shift, and go to state 50


State 34

   21 statement: IDENT . ASSIGN Expression
   22          | IDENT . L_SQUARE_BRACKET Expression R_SQUARE_BRACKET ASSIGN Expression

    ASSIGN            shift, and go to state 51
    L_SQUARE_BRACKET  shift, and go to state 52


State 35

   15 IFfunction: IF . BoolExp THEN

    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 54
    TRUE     shift, and go to state 55
    FALSE    shift, and go to state 56
    NOT      shift, and go to state 57
    SUB      shift, and go to state 58
    L_PAREN  shift, and go to state 59

    var               go to state 60
    BoolExp           go to state 61
    Relation_and_Exp  go to state 62
    RelationExp       go to state 63
    Expression        go to state 64
    MultExp           go to state 65
    term              go to state 66


State 36

   17 WHILEFunc: WHILE .

    $default  reduce using rule 17 (WHILEFunc)


State 37

   19 DOWHILEfunc: DO . BEGINLOOP

    BEGINLOOP  shift, and go to state 67


State 38

   29 statement: CONTINUE .

    $default  reduce using rule 29 (statement)


State 39

   27 statement: READ . varss

    IDENT  shift, and go to state 68

    varss  go to state 69
    var    go to state 70


State 40

   28 statement: WRITE . varss

    IDENT  shift, and go to state 68

    varss  go to state 71
    var    go to state 70


State 41

   30 statement: RETURN . Expression

    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 54
    SUB      shift, and go to state 58
    L_PAREN  shift, and go to state 72

    var         go to state 60
    Expression  go to state 73
    MultExp     go to state 65
    term        go to state 66


State 42

   16 IFELSEFunc: IFfunction . Statements ELSE
   23 statement: IFfunction . Statements ENDIF

    IDENT     shift, and go to state 34
    IF        shift, and go to state 35
    WHILE     shift, and go to state 36
    DO        shift, and go to state 37
    CONTINUE  shift, and go to state 38
    READ      shift, and go to state 39
    WRITE     shift, and go to state 40
    RETURN    shift, and go to state 41

    $default  reduce using rule 33 (Statements)

    IFfunction       go to state 42
    IFELSEFunc       go to state 43
    WHILEFunc        go to state 44
    WHILEStatement   go to state 45
    DOWHILEfunc      go to state 46
    DOWHILEStatemnt  go to state 47
    statement        go to state 48
    Statements       go to state 74


State 43

   24 statement: IFELSEFunc . Statements ENDIF

    IDENT     shift, and go to state 34
    IF        shift, and go to state 35
    WHILE     shift, and go to state 36
    DO        shift, and go to state 37
    CONTINUE  shift, and go to state 38
    READ      shift, and go to state 39
    WRITE     shift, and go to state 40
    RETURN    shift, and go to state 41

    $default  reduce using rule 33 (Statements)

    IFfunction       go to state 42
    IFELSEFunc       go to state 43
    WHILEFunc        go to state 44
    WHILEStatement   go to state 45
    DOWHILEfunc      go to state 46
    DOWHILEStatemnt  go to state 47
    statement        go to state 48
    Statements       go to state 75


State 44

   18 WHILEStatement: WHILEFunc . BoolExp BEGINLOOP

    NUMBER   shift, and go to state 53
    IDENT    shift, and go to state 54
    TRUE     shift, and go to state 55
    FALSE    shift, and go to state 56
    NOT      shift, and go to state 57
    SUB      shift, and go to state 58
    L_PAREN  shift, and go to state 59

    var               go to state 60
    BoolExp           go to state 76
    Relation_and_Exp  go to state 62
    RelationExp       go to state 63
    Expression        go to state 64
    MultExp           go to state 65
    term              go to state 66


State 45

   25 statement: WHILEStatement . Statements ENDLOOP
